--- a/index.html
+++ b/index.html
@@ -3,14 +3,152 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Radar Detail View</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Tourism Destination Visualization</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            margin: 0;
+            height: 100vh;
+        }
+
+        #sidebar {
+            width: 20%;
+            padding: 20px;
+            background-color: #f5f5f5;
+            border-right: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+
+        #sidebar h3 {
+            margin-top: 0;
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        select {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        .add-btn {
+            width: 100%;
+            padding: 10px;
+            font-weight: bold;
+            color: #fff;
+            background-color: #4CAF50;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            box-sizing: border-box;
+            margin-bottom: 15px;
+        }
+
+        #selected-destinations div {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 5px;
+        }
+
+        #selected-destinations button {
+            background-color: #f44336;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            padding: 5px 10px;
+            cursor: pointer;
+        }
+
+        .view-selection {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+        }
+
+        .view-selection button {
+            width: 100%;
+            padding: 10px;
+            background-color: #e0e0e0;
+            border: none;
+            cursor: pointer;
+            font-weight: bold;
+            color: #333;
+            box-sizing: border-box;
+        }
+
+        .view-selection button.selected {
+            background-color: #d3d3d3;
+            color: #000;
+            border-left: 4px solid #4CAF50;
+        }
+
+        #visualization {
+            flex-grow: 1;
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-sizing: border-box;
+        }
+
+        svg {
+            width: 100%;
+            height: auto;
+            border: 1px solid #ccc;
+        }
+    </style>
 </head>
 <body>
-    <div id="radar-container"></div>
-    
+    <div id="sidebar">
+        <h3>Selection Panel</h3>
+
+        <div class="form-group">
+            <label for="category">Category</label>
+            <select id="category">
+                <option value="Museums">Museums</option>
+                <option value="Religious sites">Religious Sites</option>
+                <option value="City parks">City Parks</option>
+                <option value="Ancient towns">Ancient Towns</option>
+                <option value="Ecological sites">Ecological Sites</option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label for="search">Search</label>
+            <select id="search">
+                <option value="" disabled selected>Select a destination</option>
+            </select>
+        </div>
+
+        <div id="selected-destinations"></div>
+
+        <button class="add-btn" onclick="addDestination()">Add</button>
+
+        <div class="view-selection">
+            <button id="overview" class="view-btn selected" onclick="selectView('overview')">Sentiment Matrix</button>
+            <button id="time_series" class="view-btn" onclick="selectView('time_series')">Time Series</button>
+            <button id="radar_detail" class="view-btn" onclick="selectView('radar_detail')">Radar Detail</button>
+        </div>
+    </div>
+
+    <div id="visualization">
+        <svg></svg>
+    </div>
+
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-cloud/1.2.5/d3.layout.cloud.min.js"></script>
-    <script src="radar.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
