--- a/index.html
+++ b/index.html
@@ -144,8 +144,10 @@
         </div>
     </div>
 
-    <div id="visualization">
-        <svg></svg>
+    <div id="visualization-container">
+        <div id="visualization">
+            <svg></svg>
+        </div>
     </div>
 
     <script src="https://d3js.org/d3.v7.min.js"></script>
